# agentfence

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  cloudflared.yml  deploy.py  docker-compose.yml  pricing.json  pyproject.toml  run_full_demo.py  setup.ps1  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml
agentfence/: __init__.py  agent_registry.py  budget_enforcer.py  cli.py  config.py  cost_engine.py  gateway.py  logging.py  models.py  replay.py  replay_store.py  security.py  tracer.py
dashboard/: app.py
examples/: __init__.py  research_agent.py  runaway_agent.py
sentinel/: __init__.py  agent_registry.py  budget_enforcer.py  cli.py  config.py  cost_engine.py  gateway.py  logging.py  models.py  replay.py  replay_store.py  security.py  tracer.py
sentinel/integrations/: __init__.py  langchain.py
tests/: conftest.py  test_agent_registry.py  test_budget.py  test_cost_engine.py  test_e2e_gateway.py  test_security.py  test_smoke.py  test_tracer.py
