[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.3.0"
description = "Sentinel — guardrails, budget enforcement, and observability for AI agent workloads"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sentinel Team", email = "team@sentinel.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tiktoken>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.35",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
]

[project.scripts]
sentinel = "sentinel.cli:main"
sentinel-gateway = "sentinel.gateway:main"
sentinel-dashboard = "sentinel.dashboard:main"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F821", "F841"]
